...
    "documents_count_other": "%1$s dokumenter",
    "donate": "Vurder å gi en liten pengegave for å støtte prosjektet",
    "download": "last ned",
    "downloading": "laster ned (%1$s%%)…",
    "draw_ocr_overlay": "tegn OCR-overlegg",
    "draw_ocr_text": "gjennomsiktig OCR tekst i PDF",
    "edit": "rediger",
    "edit_extra_field": "rediger ekstra felt",
    "email": "e-post",
    "enable": "aktiver",
    "enabled": "aktivert",
    "english": "Engelsk",
    "enhance": "forbedre",
    "enhance_desc": "forbedre egenskapene i bildet",
    "enter_passcode": "Skriv inn pin",
    "error": "feil",
    "error_loading_image": "det skjedde en feil under innlastingen av bildet %1$s (%2$s)",
    "existing_folders": "eksisterende mapper",
    "expanded": "utvidet",
...
    "file_naming_template": "mal for filnavn",
    "filename": "filnavn",
    "filename_date_format": "filnavn-datoformat",
    "filename_date_format_desc": "eksportert filnavn er basert på nåværende tidspunkt. Her kan du endre formatet",
    "filename_date_format_fulldesc": "definerer datoformatet som brukes ved eksport av filer\n* bruk %1$s for %2$s-format\n* bruk %3$s for epoch (varighet i ms siden 1970) tidsstempel\n* bruk egendefinert format med %4$s. Du kan finne mer %5$s",
    "filename_use_document_name": "hvis mulig, bruk dokumentnavn",
    "filters": "filter",
    "finish": "ferdig",
    "flash_mode": "blitsmodus",
    "folder": "mappe",
    "folder_color_as_background": "bruk farge på bakgrunn",
    "folder_color_as_background_desc": "når aktivert, vil mappens farge bli brukt som bakgrunnsfarge. Ellers vil den bli brukt for det lille mappikonet",
    "folder_sync_desc": "mappe for å lagre filer",
...
    "open": "åpne",
    "open_trash": "åpne søppel",
    "operations": "operasjoner",
    "operations_settings_desc": "innstillinger for bildeoperasjoner",
    "optional_pdf_password": "PDF passord (valgfri)",
    "orientation": "orientering",
    "page": "side",
    "page_layout": "sideoppsett",
    "page_margin": "sidemargin",
    "page_padding": "marginer",
    "paper_size": "papirstørrelse",
    "passcode_creation": "Lag en pinkode",
    "password": "passord",
...
