...
    nld: 'Dutch; Flemish',
    nor: 'Norwegian',
    oci: 'Occitan (post 1500)',
    ori: 'Oriya',
    osd: 'OSD',
    pan: 'Panjabi;',
    'pdf.ttf': 'PDF',
    pol: 'Polish',
    por: 'Portuguese',
    pus: 'Pushto;',
    que: 'Quechua',
    ron: 'Romanian;Moldavian;Moldovan',
    rus: 'Russian',
...
            this.languages = array.join('+');
        }
    }

    async ocrPage({
        dataType,
        document,
        language = this.mLanguages,
        onProgress,
        pageIndex
    }: {
        language?: string;
        document: OCRDocument;
...
