...
    "documents_count_other": "%1$s documents",
    "download": "telecargar",
    "downloading": "telecargament (%1$s%%)…",
    "edit": "editar",
    "enter_passcode": "Picar lo PIN",
    "error": "error",
    "export": "exportar",
    "exporting": "exportacion",
    "filename": "nom de fichièr",
    "filters": "filtres",
    "finish": "terminar",
    "flash_mode": "mòde flash",
    "folder": "dossièr",
...
    "selected_one": "%1$s seleccionats",
    "selected_other": "%1$s seleccionats",
    "send": "enviar",
    "settings": {
        "title": "paramètres"
    },
    "share": "partejar",
    "share_images": "partejar los imatges",
    "show_fullscreen_images": "plen ecran",
    "sort": {
        "ascending": "ascendent",
        "descending": "descendent"
    },
...
